--- a/form.html
+++ b/form.html
@@ -86,7 +86,12 @@
                 <option value="Sylhet">Sylhet</option>
                 <option value="Tangail">Tangail</option>
                 <option value="Thakurgaon">Thakurgaon</option>  
-        </select>
+        </select> <br> 
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="John"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="Doe"><br><br>
+        <input type="submit" value="Submit">
         </form>
      
        
